# sirix-rust-client

./: Cargo.toml  LICENSE  README.md  prepare-test.sh
.github/workflows/: rust.yml
src/: auth.rs  client.rs  constants.rs  database.rs  error.rs  http.rs  info.rs  lib.rs  mock.rs  resource.rs  sirix.rs  types.rs  utils.rs
src/asynchronous/: auth.rs  client.rs  database.rs  error.rs  http.rs  mod.rs  resource.rs  sirix.rs
src/synchronous/: auth.rs  client.rs  database.rs  error.rs  http.rs  mod.rs  resource.rs  sirix.rs
tests/: sirix.rs
