[package]
name = "sirix-rust-client"
version = "0.1.0"
authors = ["Ben Lovy <ben@deciduously.com>", "Moshe Uminer <47164590+mosheduminer@users.noreply.github.com>"]
edition = "2018"
license = "APACHE-2.0"
description = "Rust interface for interacting with SirixDB"
readme = "README.md"
repository = "https://github.com/sirixdb/sirix-rust-client/"
keywords = ["database"]
categories = ["api-bindings", "database"]
homepage = "https://sirix.io/"
# documentation = "https://docs.rs/sirix-rust-client"

[dependencies]

bytes = "1"
log = "0.4"
thiserror = "1.0"
serde_json = "1.0"
futures-core = "0.3.12"

[dependencies.hyper]

version = "0.14"
features = ["client", "tcp", "http1", "http2", "stream"]

[dependencies.serde]

version = "1.0"
features = ["derive"]

[dependencies.tokio]

version = "1"
features = ["full", "test-util", "sync"]

[dev-dependencies]

mockito = "0.29.0"
pretty_assertions = "0.6"