[package]
name = "sirix-rust-client"
version = "0.1.0"
authors = ["Ben Lovy <ben@deciduously.com>", "Moshe Uminer <47164590+mosheduminer@users.noreply.github.com>"]
edition = "2018"
license = "APACHE-2.0"
description = "Rust interface for interacting with SirixDB"
readme = "README.md"
repository = "https://github.com/sirixdb/sirix-rust-client/"
keywords = ["database"]
categories = ["api-bindings", "database"]
homepage = "https://sirix.io/"
# documentation = "https://docs.rs/sirix-rust-client"

[dependencies]

bytes = "1"
log = "0.4"
thiserror = "1.0"
serde_json = "1.0"
serde_with = "1.9.4"
quick-xml = "0.22.0"
futures-core = {version = "0.3.14", optional = true}

ureq = {version = "2.1.1", optional = true}

[dependencies.hyper]

version = "0.14"
optional = true
features = ["client", "tcp", "http1", "http2", "stream"]

[dependencies.serde]

version = "1.0"
features = ["derive"]

[dependencies.tokio]

version = "1"
optional = true
features = ["full", "test-util", "sync"]

[dev-dependencies]

mockito = "0.30.0"
pretty_assertions = "0.7"
sn_fake_clock = "0.4.14"


[features]
sync = ["ureq"]
async = ["futures-core", "hyper", "tokio"]